@@ -1,10 +1,14 @@
 Package: MDplot
 Version: 1.0.1
-Date: XXXX-XX-XX
-Authors@R: person( given = "Christian", family = "Margreitter",
-                   email = "christian.margreitter@gmail.com", role = c( "aut", "cre" ) )
+Date: 2017-06-01
+Authors@R: c( person( given = "Christian", family = "Margreitter",
+                      email = "christian.margreitter@gmail.com", role = c( "aut", "cre" ) ),
+              person( given = "Chris", family = "Oostenbrink",
+                      role = "aut" ) )
 Title: Visualising Molecular Dynamics Analyses
 Depends: R (>= 3.0.0), methods, MASS, RColorBrewer, gplots, gtools
+Suggests: R.rsp
+VignetteBuilder: R.rsp
 Description: Provides automatization for plot generation succeeding common molecular dynamics analyses.
              This includes straightforward plots, such as RMSD (Root-Mean-Square-Deviation) and
              RMSF (Root-Mean-Square-Fluctuation) but also more sophisticated ones such as
