@@ -37,11 +37,18 @@ Returns a list of list, the latter each holding for every data input series:
 \item{\code{sd}} The standard deviation over the whole set.
 }}
 \examples{
+# GROMOS
 timeseries( load_timeseries( c( system.file( "extdata/timeseries_example_1.txt.gz",
                                              package = "MDplot" ),
                                 system.file( "extdata/timeseries_example_2.txt.gz",
                                              package = "MDplot" ) ) ),
             snapshotsPerTimeInt = 100 )
+
+# GROMACS
+timeseries( load_timeseries( c( system.file( "extdata/timeseries_example_GROMACS.txt.gz",
+                                             package = "MDplot" ) ),
+                             mdEngine = "GROMACS" ),
+            ylim = c( 0.545, 0.7 ), valueName = "Area per lipid", valueUnit = "nm^2" )
 }
 \author{Christian Margreitter}
 \keyword{timeseries}
