@@ -1,0 +1,5 @@
+%\VignetteIndexEntry{MDplot publication}
+%\VignetteEngine{R.rsp::asis}
+%\VignetteKeyword{PDF}
+%\VignetteKeyword{vignette}
+%\VignetteKeyword{package}
