@@ -1,7 +1,10 @@
 Version: 1.0.1
-Date: XXX-XX-XX
+Date: 2017-06-01
 
 o fixed some typos in the manual pages
+o added vignette (publication)
+o added special input support for function "load_timeseries()" to be able
+  to load multi-column timeseries data
 ------------------------
 
 Version: 1.0.0
